--- a/main.css
+++ b/main.css
@@ -9,6 +9,13 @@ body {
   font-size: 15px;
 }
 
+@media (max-width:500px) {
+  body {
+    height: 1000px;
+    
+  }
+
+}
 
 
 /* Start contaner */
@@ -21,7 +28,7 @@ body {
   border-radius: 13px;
   box-shadow: 0 1px 4px rgba(255, 255, 255, 0.2), 0 0 40px rgba(255, 255, 255, 0.2);
   transition: 1s;
-  inset: 0;    /*  it gives top-bottom-left-righ: 0; */
+  inset: 0;
   margin: auto;
   overflow: hidden;
 }
@@ -31,7 +38,9 @@ body {
     flex-direction: column-reverse;
     height: fit-content;
     width: 350px;
+    margin-top: 150px;
   }
+
 }
 
 @media (min-width:500px) and (max-width: 800px){
